Fixes clipping on fixed and absolutely positioned elements.

Fixed positioned elements are not clipped by their ancestors,
except by the rootWebArea. Similarly with absolutely positioned
elements, except if they have an ancestor with some non-static
positioning.

Bug: 792124
Change-Id: I9c31c90fed89179434ae7f89aa18528e929348da